Aggiunte quasi tutti gli esercizi delle matrici

--- a/cpp.html
+++ b/cpp.html
@@ -1893,108 +1893,228 @@
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 1</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Diagonale principale e secondaria</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				svolgere un esercizio che carica una matrice quadrata (4x4) di interi e visualizza prima  la diagonale principale e poi quella secondaria.
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 2</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Triangolo superiore ed inferiore di una matrice</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+
+				dichiarare una matrice NxN quadrata precaricata.<br>
+				Visualizzare il triangolo superiore.<br>
+				Utilizzare i cicli in modo da effetture un numero di operazioni minori di NxN<br><br>
+
+				Visualizzare il triangolo inferiore. In questo caso per dare una forma che ricordi il triangolo inferiore utilizzare i cicli completi
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 3</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Funzioni con matrici</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+
+				scrivere una funzione che carica una matrice NxM con i valori specificati dall'utente.<br>
+
+				scrivere una funzione che visualizza i valori della matrice<br>
+
+				scrivere una funzione che visualizza il triangolo superiore<br>
+
+				scrivere una funzione che visualizza il triangolo inferiore<br>
+
+				Nel main dichiarare la matrice e chiamare le varie funzioni eseguite.
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 4</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Matrice dominante</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				Verificare se una matrice quadrata di interi (NxN) è diagonalmente dominante<br>(cioè se la somma dei valori assoluti degli elementi su ciascuna riga, escluso l'elemento sulla diagonale principale, è minore del valore assoluto dell'elemento corrispondente sulla diagonale principale). <br>Questa condizione deve valere per ogni riga.
+
+				Per il valore assoluto utilizzare la funzione abs della libreria math.h .
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 5</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Matrice ordinata</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+
+				Una matrice si definisce «ordinata per righe» se
+				gli elementi di ogni riga sono disposti in ordine
+				crescente da sinistra verso destra e tutti gli elementi
+				di ogni riga, esclusa la prima, sono maggiori
+				di ciascuno degli elementi della riga precedente.<br>
+				Scrivere una funzione C/C++ che restituisca
+				true, se una matrice fornita come argomento è
+				ordinata per righe, false altrimenti.
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 6</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Matrice simmetrica</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+
+				Scrivere una funzione C/C++ che determini, producendo
+				come risultato true o false, se una matrice
+				quadrata di N × N elementi è simmetrica,
+				cioè se gli elementi in posizione simmetrica rispetto
+				alla diagonale principale sono tutti uguali.<br>
+
+				Precaricare la matrice e chiamare la funzione per verificare se è simmetrica
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 7</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Prodotto tra matrici quadrate</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				Il prodotto tra due matrici A e B, quadrate e aventi la stessa dimensione, è una matrice quadrata C della stessa dimensione: l’elemento di coordinate
+				(i, j) della matrice C è la somma dei prodotti degli elementi corrispondenti della i-esima riga di A e della j-esima colonna di B:<br><br>
+				C(i, j) = A(i, 0) * B(0, j) + A(i, 1) * B(1, j) + …<br><br>
+
+				Scrivere una funzione C++ che determini il prodotto tra due matrici quadrate.
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 8</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Voti studenti</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+
+				Si crei un vettore di stringhe di nome materie ed un vettore di stringhe che contiene i nomi degli studenti. <br>Si crei inoltre una matrice di float che contiene i voti che ogni studente ha nella corrispondente materia.<br>
+				<br>
+				<!--//IMMAGINE DI TABELLA-->
+
+				la matrice e i vettori devono essere interpretati secondo l'esempio.<br>
+
+				La matrice ha dimensioni RIGHE x COLONNE<br>
+
+				il vettore delle materie ha dimensione pari alle COLONNE. Il vettore dei nomi studenti ha dimensione pari a RIGHE<br>
+				<br>
+				Creare un menu con switch case in cui l'utente può scegliere le seguenti operazioni:<br>
+
+				    <li>carica: caricare la matrice e i corrispondenti vettori (realizzarlo in una funzione)</li>
+				    <li>voto medio: creare una funzione che dato il nome di uno studente, cercare la sua posizione nel vettore degli studenti e calcolare la media dei suoi voti. La funzione restituisce 0 se lo studente non è stato trovato, la media altrimenti. Nel main bisogna stampare "lo studente Mario ha la media pari a xx,xx" oppure "lo studente Mario non è presente"</li>
+
+				    <li>Chiedere in input una materia. Chiamare una funzione che restituisca il vettori con gli studenti che hanno un voto pari a quello massimo in quella materia e un vettore di nomi di studenti che hanno il voto minimo in quella materia. Es. se il voto massimo in italiano è 9 e il voto minimo in italiano è 3 devo restituire due vettori, uno che contiene i nomi che hanno voto 9 e uno che contiene i nomi degli studenti con voto 3.</li>
+
+						<div class="soluzione">
+							Il prototipo della funzione è il seguente:<br><br>
+
+							bool min_max(string MaterieVett[ ], string colonn, Float VOTI[ ][c],int righe, string studenti[], string materia_min_max, string studentiMax[], int & max, string studentiMin[], int & min ,int &LunghezzaVettMax, int & LunghezzaVettMin);<br><br>
+
+							La funzione restituisce false se non esiste la materia.<br>Nel vettore studentiMin[] ci sono i nomi degli studeti che hanno il voto minimo (la lunghezza del vettore è LunghezzaVettMin. Analogamente per il massimo).<br>
+							<br>
+
+							Quando si rierca la materia nel vettore delle materie non bast utilizzare una uguaglianza in quanto Italiano e italiano devono essere considerate uguali, quindi si usa una funzione che riceve in ingresso due stringhe, applica toUpper ad ogni carattere e restituisce true o false in base al fatto che le stringhe siano uguali.
+							<br>
+							Nel main bisogna visualizzare per ogni elementi dei vettori min e max
+
+							lo studente Mario ha il voto massimo (7) in italiano
+
+							lo studente Giuseppe ha il voto minimo(5) in italiano
+
+						</div>
+
+
+				    <li>Media_migliore: visualizzare il nome dello studente che ha la media migliore (la funzione media_migliore restituisce l’indice dello studente che ha la media più alta e la media stessa. Nel main bisogna visualizzare: lo studente Mario ha la media 8</li>
+				    <li>Visualizza promossi. chiamare una funzione che inserisce all'interno di un vettore i nomi degli studenti che hanno tutte sufficienze. La funzione restituisce il numero di studenti presenti nel vettore. Nel main chiamare una funzione stampa vettore a cui si passa come parametro un vettore di stringhe e la lunghezza del vettore</li>
+				    <li>Visualizza rimandati. Chiama una funzione che inserisce all'interno di un vettore i nomi degli studenti che hanno da 1 a 3 insufficienze. La funzione restituisce ilnumero di elementi presenti nel vettore. Nel main chiamare una funzione stampa vettore a cui si passa come parametro un vettore di stringhe e la lunghezza del vettore</li>
+				<br><br>
+				Il progetto deve essere suddiviso in più file (il main in un file e le funzioni in un altro)<br>
+
+				Inserire i controlli per cui non possono essere eseguite le funzionalità di voto medio se non è stata effettuata l'operazione di caricamento<br>
+
+				Prevedere tutti i controlli sui dati di input (funzione che controlla che ogni stringa relativa al nome dello studente o al nome delle materie sia formata da caratteri alfabetici)<br>
+				<br>
+				AGGIUNGERE I CONTROLLI CHE IL NOME E IL COGNOME DELLO STUDENTE SIANO CON LA LETTERA MAIUSCOLA E TUTTI I CONTROLLI SUI NUMERI (VALORE INSERITO NEL SWITCH E NEI VOTI)<br>
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 9</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Funzione di cifratura e decifratura alle matrici</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				Creare una funzione che riceve in ingresso un carattere, una chiave e restituisce una chiave cifrata secondo l'algoritmo di Cesare. <br>Analogamente per una funzione di decifratura.
+				<br>
+				Dichiarare una matrice di caratteri precaricata con un messaggio e ad ogni elemento della matrice applicare la funzione cifratura e inserirlo in una matrice parallela.<br>
+				Effettuare l'operazione inversa alla matrice cifrata. <br>Chiamare una funzione stampa_matrice prima alla matrice originale, a quella cifrata e a quella decifrata
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 10</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Prodotto righe minore del successivo</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				Leggere in input due interi positivi n e m e gli elementi di una matrice A di ordine n*m di numeri interi. <br>Verificare se il prodotto di ogni riga è minore o uguale a quello della riga successiva. <br>Stampare “sì” (una sola volta) se la condizione è verificata, stampare “no” (una sola volta) altrimenti.<br>
+
+				Visualizzare l'elemento minimo, massimo e medio della matrice.<br>
+
+				Utilizzare le funzioni opportune e commentare il codice.
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 11</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Funzioni di somma riga, colonna e media di tutti i valori</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				Scrivere un programma per la gestione di alcuni valori interi in una matrice. Il programma deve consentire di:<br>
+
+				    <li>Inserire i valori nella matrice</li>
+				    <li>Stampare a video la matrice</li>
+				    <li>Calcolare i totali per ogni riga</li>
+				    <li>Calcolare i totali per ogni colonna</li>
+				    <li>Calcolare la media di tutti i valori</li>
+
+				Prevedere una opportuna funzione per ognuna delle operazioni elencate sopra. Il programma deve iniziare visualizzando all’utente un menu con tutte le operazioni possibili.
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 12</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Matrice quadrata da due vettori</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+
+				Scrivere una funzione C++ che a partire da due vettori di valori numerici interi della stessa dimensione, costruisca una matrice quadrata in cui ogni singolo elemento di coordinate (r, c) sia ottenuto moltiplicando l’r-esimo elemento del primo vettore per il c-esimo elemento del secondo vettore.<br>
+				<br>
+				<pre>
+				Per esempio, dati i vettori<br>
+
+				[1, 2, 3]          e        [5, 4, 6]
+
+				La matrice risultato dovrà essere
+
+				1*5        1*4        1*6
+
+				2*5        2*4        2*6
+
+				3*5        3*4        3*6
+				</pre>
+				Scrivere un programma C++ che, dopo aver richiesto all’utente l’inserimento dei due vettori, visualizzi gli elementi della matrice ottenuta come risultato dell’applicazione della funzione precedente.
+				<br>
+				Pertanto, definire e utilizzare le funzioni per:<br>
+
+				    <li>Caricare un vettore</li>
+				    <li>Stampare una matrice</li>
+				    <li>Ottenere la matrice quadrata a partire dai due vettori</li>
+
 			</div>
 
 		</div>
