Finita la sezione delle matrici

--- a/cpp.html
+++ b/cpp.html
@@ -2121,27 +2121,65 @@
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 13</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Minimi e massimi di riga</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				Scrivere una funzione C++ che, a partire da una matrice numerica di r x c elementi, costruisca due vettori di r elementi ciascuno contenenti rispettivamente i valori minimi e massimi di ogni riga della matrice.
+
+				Scrivere un programma che, dopo aver richiesto all’utente l’inserimento degli elementi della matrice, costruisca i due vettori applicando la funzione sopra, stampando alla fine i due vettori ottenuti.
+				<pre>
+				Esempio:
+
+				2             99          -2           0
+
+				5             -8           8           15
+
+				6             3            55          4
+
+				Vettore minimi di riga = [-2, -8, 3]
+
+				Vettore massimi di riga = [99, 15, 55]
+			</pre>
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 14</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Minimi e massimi di colonna</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				Scrivere una funzione C++ che, a partire da una matrice numerica di r x c elementi, costruisca due vettori di c elementi ciascuno contenenti rispettivamente i valori minimi e massimi di ogni colonna della matrice.
+
+				Scrivere un programma che, dopo aver richiesto all’utente l’inserimento degli elementi della matrice, costruisca i due vettori applicando la funzione sopra, stampando alla fine i due vettori ottenuti.
+				<pre>
+				Esempio:
+
+				2             99          -2           0
+
+				5             -8           8           15
+
+				6             3            55          4
+
+				Vettore minimi di colonna = [ 2, -8, -2, 0]
+
+				Vettore massimi di colonna = [6, 99, 55, 15]
+			</pre>
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 15</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Vettori somma negativi (riga) e positivi (colonna) da matrice</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				Scrivere un programma che consenta di<br>
+
+				    <li>caricare una matrice r *c di interi</li>
+				    <li>stampare la matrice</li>
+				    <li>stampare solo le righe dispari</li>
+				    <li>costruire un vettore contenente per ogni riga la somma dei numeri negativi</li>
+				    <li>costruire un vettore contenente per ogni colonna la somma dei numeri positivi</li>
+
+				Prevedere una funzione per ognuna delle cinque operazioni elencante sopra.
 			</div>
 
 		</div>
